(library
 (name elykseer)
 (foreign_stubs (language cxx) (names helper) (flags -std=c++17 -fno-exceptions))
 (c_library_flags :standard -lstdc++)
 (libraries elykseer_base
            elykseer_crypto
            mlcpp_filesystem mlcpp_cstdio
            irmin.unix irmin-git.unix)
 (preprocess (pps lwt_ppx))
)
