opam-version: "2.0"
name: "elykseer-ml"
version: "~dev"
synopsis: ""
maintainer: "Alexander Diemand <codieplusplus@apax.net>"
authors: "Alexander Diemand <codieplusplus@apax.net>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/eLyKseeR/elykseer-ml"
bug-reports: ""
depends: [
  "dune" {>= "3.0.3"}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://"
url {
  src: "file:///Users/alex/Documents/Coding/coq/eLyKseeR.modelling.git/coq"
}
